# ncPong

./: CMakeLists.txt  Info.plist.in  README.md  azure-pipelines.yml  io.github.ncine.ncpong.desktop  ncpong.lua  pong.cpp  pong.h
android/: build.gradle.in
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt.in
android/src/main/java/com/encelo/ncpong/: LoadLibraries.java
android/src/main/java/io/github/ncine/ncpong/: LoadLibraries.java  LoadLibrariesTV.java
android/src/main/jni/: Android.mk.in  Application.mk.in
android/src/main/res/values/: strings.xml
cmake/: find_ncine.cmake  ncpong_build_android.cmake  ncpong_copy_targets.cmake  ncpong_get_version.cmake  ncpong_installation.cmake  ncpong_lua.cmake  ncpong_options.cmake  ncpong_options_presets.cmake  ncpong_prepare_android.cmake  package_copy_targets.cmake  package_info.cmake  package_installation.cmake
